--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 Bot Test page
 </head>
-<body onload="onBodyLoaded()">
+<body>
    <div id="body-content">
        <h1>Welcome to the test website Bot!</h1>
 	<style type='text/css'>
